--- a/Project_Flight/dental_sys/Properties/Resources.resx
+++ b/Project_Flight/dental_sys/Properties/Resources.resx
@@ -136,4 +136,13 @@
   <data name="income" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\income.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_bamboo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_bamboo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_vietjet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VietJet-Air-Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_vnairlines" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_vietnamairlines.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
